style.css
html {
  background-color: gainsboro;
  overflow-x: hidden;
}

body {
  overflow-x: hidden;
  margin: 0;
}

nav {
  font-size: 20px;

  ul {
    display: flex;
    flex-direction: row;
    list-style-type: none;
  }

  li {
    padding: 4px;
  }
}

.artwork_grid {
  width: 100vw;
  max-width: 1000px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  /* align-items: center; */
  align-items: start;
  justify-content: center;
  row-gap: 16px;
  column-gap: 10px;
  margin: 16px auto;
}

.art_container {
  text-align: center;
  .title {
    font-style: italic;
    font-weight: 600;
    font-size: 16px;
    margin: 6px 0;
  }

  img {
    display: block;
    width: 100%;
    margin: 0 auto;

    aspect-ratio: 1;
    object-fit: cover;
  }
}

@media screen and (min-width: 474px) {
  .artwork_grid {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (min-width: 768px) {
  .artwork_grid {
    grid-template-columns: repeat(4, 1fr);
    padding: 0 16px;
    width: calc(100vw - 32px);
  }
}

@media screen and (min-width: 1050px) {
  .artwork_grid {
    column-gap: 16px;
  }
}

